--- a/style.css
+++ b/style.css
@@ -421,11 +421,11 @@ main {
 
 
   .main-section .popup {
-    width: 400px;
+    width: 300px;
     height: auto;
     padding: 15px;
     position: absolute;
-    left: 70px;
+    left: calc(50vw - 150px);
   }
 
   .popup h2 {
@@ -459,8 +459,32 @@ main {
     font-size: 12px;
   }
 
-  .fa-circle-xmark{
+  .fa-circle-xmark {
     margin-left: 50%;
     margin-right: 10px;
+  }
+
+  .popup{
+    max-width: 300px;
+  }
+
+  #date-box, #intervals-box{
+    width: 160px;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  #date-box label, #intervals-box label{
+    font-size: 14px;
+  }
+
+  #date-box input, #intervals-box input{
+    width: 100px;
+    height: 20px;
+  }
+
+  #add-date, #add-intervals {
+    width: 160px;
+    font-size: 12px;
   }
 }
