--- a/style.css
+++ b/style.css
@@ -357,7 +357,7 @@ main {
   gap: 10px;
 }
 
-.task-item div {
+.task-item .task-content, .task-item .task-content div {
   display: flex;
   gap: 5px;
 }
@@ -368,12 +368,33 @@ main {
 
 .popup-fullscreen{
   display: flex; 
+  align-items: center;
   position: absolute; 
   background-color: #000; 
   padding: 40px; 
   border-radius: 10px; 
-  top: 20%;
-  left: calc(50vw - 400px);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 600px;
+}
+
+.popup-fullscreen .task-content{
+  width: 500px;
+  align-items: center;
+}
+
+.popup-fullscreen .task-content div{
+  background-color: #fff;
+  padding: 5px;
+  border-radius: 10px;
+}
+
+.popup-fullscreen .task-content div h3{
+  max-width: 200px;
+  text-wrap: wrap;
+  color: #000;
+  font-size: 12px;
 }
 
 @media (max-width: 768px) {
@@ -522,6 +543,9 @@ main {
     font-size: 12px;
     cursor: pointer;
     background-color: #ff0000;
+    border: none;
+    padding: 5px;
+    border-radius: 10px;
   }
 
   .task-title{
@@ -529,4 +553,18 @@ main {
     overflow-x: hidden;
     text-wrap: nowrap;
   }
+
+  .popup-fullscreen{
+    top: 50%;
+    left: 45%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    width: 360px;
+  }
+
+  .popup-fullscreen .task-content div h3{
+  max-width: 100px;
+  text-wrap: wrap;
+  color: #000;
+}
 }
